# DLAM-Project

./: .gitignore  README.md  pyproject.toml
models/: losses.pkl  losses_original.pkl
notebooks/: 2.) ACGAN.ipynb
src/dlam/: pyproject.toml
src/dlam/data/: dataset.py
src/dlam/notebooks/: losses_plots.ipynb  modelling_original_data.ipynb  plots.ipynb  res_net_fake.ipynb  res_net_original_data.ipynb
src/dlam/notebooks/GAN-experiments/: 1.) SGAN.ipynb  3.) CGAN.ipynb
src/dlam/resnet/: resnet.py
