[tool.poetry]
name = "dlam"
version = "0.1.0"
description = ""
authors = ["Bjarne <bjarne.ge@gmx.de>"]
readme = "README.md"
packages = [{ include = "dlam", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
medmnist = "^2.2.2"
numpy = "^1.25.0"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"